# souf-game

./: .gitignore
souf_twitch_bot/: .gitignore  Taskfile.yml  players.db  pyproject.toml
souf_twitch_bot/souf_game/: __main__.py  api.py  config.py  game.py
souf_twitch_bot/souf_game/clients/interfaces/: db_client_interface.py  twitch_client_interface.py
souf_twitch_bot/souf_game/clients/repos/: db_client.py
souf_twitch_bot/souf_twitch_bot/: __main__.py  bot.py  config.py  test.py
souf_twitch_bot/souf_twitch_bot/clients/interfaces/: db_client_interface.py  game_client_interface.py
souf_twitch_bot/souf_twitch_bot/clients/repos/: db_client.py  game_client.py
