[tool.poetry]
name = "souf-twitch-bot"
version = "0.1.0"
description = ""
authors = ["soufyan.abdellati <abdellatis149@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic-settings = "^2.6.1"
pydantic = "^2.10.2"
twitchio = "^2.10.0"
fastapi = "^0.115.6"
uvicorn = "^0.33.0"
httpx = "^0.28.1"
pygame = "^2.6.1"
structlog = "^24.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
